@@ -111,14 +111,14 @@ convert () {
     gnu*)
 	tmp_disk=`echo "$1" | sed 's%\([sh]d[0-9]*\).*%\1%'`
 	tmp_part=`echo "$1" | sed "s%$tmp_disk%%"` ;;
-    freebsd*)
+    freebsd* | kfreebsd*-gnu)
 	tmp_disk=`echo "$1" | sed 's%r\{0,1\}\([saw]d[0-9]*\).*$%r\1%' \
 			    | sed 's%r\{0,1\}\(da[0-9]*\).*$%r\1%'`
 	tmp_part=`echo "$1" \
 	    | sed "s%.*/r\{0,1\}[saw]d[0-9]\(s[0-9]*[a-h]\)%\1%" \
        	    | sed "s%.*/r\{0,1\}da[0-9]\(s[0-9]*[a-h]\)%\1%"`
 	;;
-    netbsd*)
+    netbsd* | knetbsd*-gnu)
 	tmp_disk=`echo "$1" | sed 's%r\{0,1\}\([sw]d[0-9]*\).*$%r\1d%' \
 	    | sed 's%r\{0,1\}\(fd[0-9]*\).*$%r\1a%'`
 	tmp_part=`echo "$1" \
@@ -159,7 +159,7 @@ convert () {
 		    | sed "s%)%,$tmp_bsd_partition)%"`
 	    fi
 	    echo "$tmp_drive" ;;
-	freebsd*)
+	freebsd* | kfreebsd*-gnu)
 	    if echo $tmp_part | grep "^s" >/dev/null; then
 		tmp_pc_slice=`echo $tmp_part \
 		    | sed "s%s\([0-9]*\)[a-h]*$%\1%"`
@@ -173,7 +173,7 @@ convert () {
 		    | sed "s%)%,$tmp_bsd_partition)%"`
 	    fi
 	    echo "$tmp_drive" ;;
-	netbsd*)
+	netbsd* | knetbsd*-gnu)
 	    if echo $tmp_part | grep "^[abe-p]$" >/dev/null; then
 		tmp_bsd_partition=`echo "$tmp_part" \
 		    | sed "s%\([a-p]\)$%\1%"`
