@@ -1,3 +1,7 @@
+2004-07-20  Robert Millan  <robertmh@gnu.org>
+
+	* util/grub-install.in: Detect GNU/k*BSD systems as well.
+
 2004-07-16  Yoshinori K. Okuji  <okuji@enbug.org>
 
 	* util/grub-install.in (convert): Fix the sed statement for
